--- a/luci-app-zerotier/Makefile
+++ b/luci-app-zerotier/Makefile
@@ -1,14 +1,19 @@
+#
+# Copyright (C) 2008-2014 The LuCI Team <luci@lists.subsignal.org>
+#
 # This is free software, licensed under the Apache License, Version 2.0 .
+#
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=Luci for smartdns server
-LUCI_DEPENDS:=+smartdns
+LUCI_TITLE:=LuCI for Zerotier
+LUCI_DEPENDS:=+zerotier
 LUCI_PKGARCH:=all
-PKG_NAME:=luci-app-smartdns
-PKG_VERSION:=1
-PKG_RELEASE:=1
+PKG_VERSION:=1.0
+PKG_RELEASE:=17
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
+
+
